# plotjs

./: .coverage  .gitattributes  .gitignore  404.html  AGENT.md  AGENTS.md  Makefile  README.md  here.html  index.html  index.py  index.qmd  justfile  mkdocs.yaml  objects.inv  package-lock.json  package.json  pyproject.toml  pytest.ini  quickstart.html  quickstart2.html  quickstart3.html  quickstart4.html  quickstart5.html  quickstart6.html  quickstart7.html  search.json  sitemap.xml  vitest.config.js  zensical.toml
.claude/: settings.local.json
.github/workflows/: doc.yaml  lint.yaml  tests-browser.yaml  tests-js.yaml  tests-python.yaml  tests.yaml  type.yaml
d3scribe/: __init__.py  css.py  main.py
d3scribe/d3/: main.js
d3scribe/static/: default.css  main.js  template.html
developers/: contributing.html  how-it-works.html
developers/contributing/: index.html
developers/how-it-works/: index.html
developers/overview/: index.html
developers/parsing-matplotlib-svg/: index.html
developers/svg-parser-reference/: index.html
docs/: contributing.md  how-it-works.md  index.md  index.py  index.qmd  plot_data.json  quickstart.html  quickstart2.html  quickstart3.html  quickstart4.html  quickstart5.html  quickstart6.html  quickstart7.html  quickstart8.html
docs/developers/: contributing.md  how-it-works.md  overview.md  parsing-matplotlib-svg.md  svg-parser-reference.md
docs/gallery/: index.md  index.qmd
docs/guides/: index.md
docs/guides/advanced/: advanced.py  index.md
docs/guides/css/: CSS-2.html  CSS.html  CSS.py  index.md
docs/guides/embed-graphs/: index.md
docs/guides/javascript/: index.md  javascript.html  javascript.py  javascript2.html
docs/guides/troubleshooting/: index.md
docs/iframes/: CSS-2.html  CSS.html  area-natural-disasters.html  bug.html  energy-consumption-france.html  javascript.html  javascript2.html  quickstart.html  quickstart10.html  quickstart11.html  quickstart12.html  quickstart13.html  quickstart2.html  quickstart3.html  quickstart4.html  quickstart5.html  quickstart6.html  quickstart7.html  quickstart8.html  quickstart9.html  random-walk-1.html
docs/reference/: css.md  datasets.md  interactive-plot.md  javascript.md  magic-plot.md  plotjs.md
docs/stylesheets/: style.css
gallery/: index.html  index.qmd
guides/: index.html
guides/advanced/: advanced.html  advanced.py  index.html
guides/css/: CSS-2.html  CSS.py  index.html
guides/embed-graphs/: index.html
guides/javascript/: index.html  javascript.py
guides/troubleshooting/: index.html
how-it-works/: index.html
iframes/: CSS-2.html  CSS.html  area-natural-disasters.html  bug.html  javascript.html  javascript2.html  quickstart.html  quickstart10.html  quickstart11.html  quickstart12.html  quickstart2.html  quickstart3.html  quickstart4.html  quickstart5.html  quickstart6.html  quickstart7.html  quickstart8.html  quickstart9.html  random-walk-1.html
jsplotlib/: main.py
jsplotlib/static/: default.css  main.js
overrides/partials/: footer.html
plotjs/: __init__.py  css.py  javascript.py  main.py  plotjs.py  polygons_mapping.py  utils.py
plotjs/data/: __init__.py  datasets.py
plotjs/static/: default.css  main.js  plotparser.js  template.html
plotjs/template/: plotparser.js
reference/: css.html  datasets.html  javascript.html  magic-plot.html
reference/css/: index.html
reference/datasets/: index.html
reference/interactive-plot/: index.html
reference/javascript/: index.html
reference/magic-plot/: index.html
reference/plotjs/: index.html
scripts/: coverage.sh  release.sh
search/: search_index.json
static/: style.css
stylesheets/: style.css
tests/: PlotSVGParser.test.js  test_css.py  test_css_and_js_utils.py  test_data.py  test_magic_plot.py  test_main.py
tests/static/: script.js  style.css
tests/test-browser/: README.md  conftest.py  test_interactions.py  test_rendering.py
tests/test-javascript/: EdgeCases.test.js  ParserSelectors.test.js  ParserSetHover.test.js  Selection.test.js
tests/test-python/: test_css.py  test_css_and_js_utils.py  test_js.py  test_magic_plot.py  test_main.py  test_other_utils.py  test_plotjs.py
tests/test-python/static/: script2.js  style-invalid.css
