[project]
name = "plotjs"
description = "Bridge between static matplotlib and interactive storytelling"
version = "0.1.0"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["matplotlib", "interactive", "javascript", "web", "css", "d3", "mpld3"]
authors = [
  { name="Joseph Barbier", email="joseph.barbierdarnal@mail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]
dependencies = [
    "jinja2>=3.1.6",
    "matplotlib>=3.9.4",
    "narwhals>=1.47.0",
]

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["plotjs"]

[tool.uv.sources]
plotjs = { workspace = true }

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.13",
    "mkdocs-material>=9.6.9",
    "mkdocstrings-python>=1.16.5",
    "coverage>=7.9.1",
    "genbadge>=1.1.2",
    "pandas>=2.3.1",
    "mkdocs-matplotlib>=0.10.1",
    "pypalettes>=0.1.4",
    "pyfonts>=1.0.0",
    "morethemes>=0.4.0",
    "plotnine>=0.13.6",
]

[project.urls]
Homepage = "https://y-sunflower.github.io/plotjs/"
Issues = "https://github.com/y-sunflower/plotjs/issues"
Documentation = "https://y-sunflower.github.io/plotjs/"
Repository = "https://github.com/y-sunflower/plotjs"
