[project]
name = "plotjs"
description = "Turn static matplotlib charts into interactive web visualizations"
version = "0.0.5"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["matplotlib", "interactive", "javascript", "web", "css", "d3", "mpld3", "plotnine"]
authors = [
  { name="Joseph Barbier", email="joseph.barbierdarnal@mail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"
]
dependencies = [
    "jinja2>=3.0.0",
    "matplotlib>=3.10.0",
    "narwhals>=2.0.0",
]

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["plotjs"]

[tool.uv.sources]
plotjs = { workspace = true }

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.13",
    "mkdocs-material>=9.6.9",
    "mkdocstrings-python>=1.16.5",
    "coverage>=7.9.1",
    "genbadge[coverage]>=1.1.2",
    "pandas>=2.3.1",
    "pypalettes>=0.1.4",
    "pyfonts>=1.0.0",
    "morethemes>=0.4.0",
    "plotnine>=0.13.6",
    "ty>=0.0.1a16",
    "polars>=1.31.0",
    "nbformat>=5.10.4",
    "nbclient>=0.10.2",
    "jupyter>=1.1.1",
    "ipywidgets>=8.1.7",
    "highlight-text>=0.2",
    "drawarrow>=0.1.0",
]

[project.urls]
Homepage = "https://y-sunflower.github.io/plotjs/"
Issues = "https://github.com/y-sunflower/plotjs/issues"
Documentation = "https://y-sunflower.github.io/plotjs/"
Repository = "https://github.com/y-sunflower/plotjs"

[tool.ty.src]
include = ["plotjs"]
exclude = ["tests", "sandbox"]

[tool.ruff]
extend-exclude = ["docs/index.qmd"]
